feat: add pics to slider, seo optimization

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/main_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AA Group</title>
+    <title>Современный ремонт квартир — AA Group</title>
+    <meta name="description" content="Выполняем ремонт любой сложности: квартиры, дома, офисы. Ремонт, который превосходит ожидания — с гарантией, прозрачной сметой и вниманием к деталям." />
   </head>
   <body>
     <div id="app"></div>
